chgmgmt_build/src/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Inovices</relationshipLabel>
        <relationshipName>Inovices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StreetName1__c</fullName>
        <label>StreetName1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StreetName2__c</fullName>
        <label>StreetName2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Invoice</label>
    <nameField>
        <label>Invoice名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inovices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>